Prevent zoom on smaller screens

--- a/css/game.css
+++ b/css/game.css
@@ -34,3 +34,10 @@ body{
 button:hover {
     background: #444;
 }
+
+#clickBtn{
+   margin: 40px;
+   padding: 30px;
+    background-color: #444;
+    border-radius: 30%;
+}
